--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,31 @@
     
     <style>
         :root {
-            --body-color: #ffffff; 
-            --z-fixed: 1000; 
-            --header-height: 60px; 
-            --title-color: #333333; 
-            --first-color: #007bff; 
-            --font-semi-bold: 500; 
+            --header-height: 3.5rem;
+
+/*========== Colors ==========*/
+/*Color mode HSL(hue, saturation, lightness)*/
+--first-color: hsl(230, 75%, 56%);
+--title-color: hsl(230, 75%, 15%);
+--text-color: hsl(230, 12%, 40%);
+--body-color: hsl(230, 100%, 98%);
+--container-color: hsl(230, 100%, 97%);
+--border-color: hsl(230, 25%, 80%);
+
+/*========== Font and typography ==========*/
+/*.5rem = 8px | 1rem = 16px ...*/
+--body-font: "Syne", sans-serif;
+--h2-font-size: 1.25rem;
+--normal-font-size: .938rem;
+
+/*========== Font weight ==========*/
+--font-regular: 400;
+--font-medium: 500;
+--font-semi-bold: 600;
+
+/*========== z index ==========*/
+--z-fixed: 100;
+--z-modal: 1000;
         }
 
         /* ----------Header and navbar -------*/
@@ -165,13 +184,203 @@
         .show-menu {
             top: 0;
         }
+
+        .login{
+         position: fixed;
+         top:0;
+         left:0;
+         width: 100%;
+         height: 100%;
+         z-index: var(--z-modal);
+         background-color: hsla(230, 75%, 32%, .1);
+         backdrop-filter: blur(24px);
+         --webkit-backdrop-filter:blur(24px);
+         padding: 8rem 1.5rem 0;
+         opacity: 0;
+         pointer-events: none;
+         transition: opacity .4s;
+
+
+        }
+
+        .login--close{
+
+            position :absolute;
+            top: 2rem;
+            right: 2rem;
+            font-size: 1.5rem;
+            color: var(--title-color);
+            cursor: pointer;
+        }
+
+        /*----login-------*/
+        .login--form, .login--group{
+            display: grid;
+        }
+        .login--form{
+
+            background-color: var(--container-color);
+            padding: 2rem 1.5rem 2.5rem;
+            box-shadow: 0 8px 32px hsla(230, 75%, 15%, .2);
+            row-gap: 1.25rem;
+            text-align: center;
+            transform: translateY(-1rem);
+            transition: transform .4s;
+        }
+
+        .login--title
+        {
+
+            font-size: var(--h2-font-size);
+            color: var(--title-color);
+        }
+
+        .login--group
+        {
+
+            row-gap: 1rem;
+        }
+
+        .login--label
+        {
+
+            display: block;
+            text-align: initial;
+            color: var(--title-color);
+            font-weight: var(--font-medium);
+            margin-bottom: .25rem;
+        }
+
+        .login--input
+        {
+
+            width: 100%;
+            background-color: var(--container-color);
+            border: 2px solid var(--border-color);
+            padding: 1rem;
+            border-radius: .5rem;
+            color:var(--text-color);
+        }
+
+        .login--input::placeholder{
+
+        color: var(--text-color);
+        }
+
+        .login--signup{
+
+            margin-bottom: .5rem;
+        }
+
+        .login--signup a{
+
+            color: var(--first-color);
+        }
+
+        .login--forgot{
+
+            display: inline-block;
+            color: var(--first-color);
+            margin-bottom:1.25rem;
+        }
+
+        .login--button
+        {
+            display: inline-block;
+            background-color: var(--first-color);
+            width: 100%;
+            color: #fff;
+            font-weight: var(--font-semi-bold);
+            padding:1rem;
+            border-radius: .5rem;
+            cursor: pointer;
+            transition: box-shadow .4s;
+        }
+
+        .login--button:hover
+        {
+
+            box-shadow: 0 4px 24px hsla(230, 75%, 40%, .4);
+
+        }
+
+        /*---show login----*/
+
+        .show-login
+        {
+            opacity: 1;
+            pointer-events: initial;
+        }
+
+        .show-login .login--form{
+
+            transform: translateY(0);
+        }
+
+        /*---BREAKPOINTS ---*/
+        /*-- for medium devices --*/
+        @media screen and (min-width : 576px)
+        {
+            .login{
+                padding-top: 10rem;
+
+            }
+        }
+        
+        .login--form{
+           max-width: 400px;
+           margin-inline:auto;
+
+
+        }
+
+        @media screen and (min-width: 1023px)
+        {
+
+            .nav{
+                height: calc(var(--header-height)+ 2rem);
+                column-gap:3rem;
+            }
+
+            .nav--close, .nav--toggle{
+
+                display: none;
+            }
+
+            .nav--menu{
+
+                margin-left: auto;
+            }
+
+            .nav--list{
+
+                flex-direction:row;
+                column-gap: 3rem;
+            }
+
+            .login--form{
+
+                padding:3rem 2rem 3.5rem;
+            }
+        } 
+
+        @media screen and(min-width: 1150px){
+
+            .container{
+                margin-inline: auto;
+            }
+        }
+
     </style>
 </head>
 <body>
 <!--====== Header ============-->
 <header class="header" id="header">
     <nav class="nav container">
-        <a href="#" class="nav--logo">Logo</a>
+        <a href="#" class="nav--logo">
+            <img src="{% static 'img/logo1.png' %}" alt="Logo">
+        </a>
+        
         <div class="nav--menu" id="nav-menu">
             <ul class="nav--list">
                 <li class="nav--item">
@@ -192,9 +401,7 @@
                 <li class="nav--item">
                     <a href="#" class="nav--link">Contacter nous</a>
                 </li>
-                <li class="nav--item">
-                    <a href="#" class="nav--link"></a>
-                </li>
+                
             </ul>
             <div class="nav--close" id="nav--close">
                 <i class="ri-close-line"></i>
@@ -207,7 +414,33 @@
             <i class="ri-menu-line"></i>
         </div>
     </nav>
+        <!-----LOGIN-------->
+       <div class="login" id="login">
 
+        <form action="" class="login--form">
+            <h2 class="login--title">Log In</h2>
+            <div class="login--group">
+                <div>
+                    <label for="email" class="login--label">Email</label>
+                    <input type="email" placeholder="Saisir votre email" id="email" class="login--input">
+                </div>
+  
+                <div>
+                    <label for="password" class="login--label">Password</label>
+                    <input type="password" placeholder="Saisir votre mot de passe" id="password" class="login--input">
+                </div>
+            </div>
+            <div>
+                <p class="login--signup">
+                  You de have an account? <a href="#">Sign up</a>
+                  
+                </p>
+                <a href="#" class="login--forgot">You forgot your password</a>
+                <button type="submit" class="login--button">Log In</button>
+            </div>
+        </form>
+        <i class="ri-close-line login--close" id="login-close"></i>
+       </div>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const navToggle = document.getElementById('nav--toggle');
@@ -222,6 +455,22 @@
                 navMenu.classList.remove('show-menu');
             });
         });
+
+        /*--------login-----*/
+        const login = document.getElementById('login'),
+              loginBtn=document.getElementById('login-btn'),
+              loginClose= document.getElementById('login-close')
+        /*----login show -----*/
+        loginBtn.addEventListener('click', ()=> {
+            login.classList.add('show-login')
+        })
+
+        /*----login hidden---*/
+         loginClose.addEventListener('click', ()=> {
+            login.classList.remove('show-login')
+        })
+
+
     </script>
 </header>
 </body>
