--- a/templates/index.html
+++ b/templates/index.html
@@ -203,15 +203,15 @@
 
         }
 
-        .login--close{
-
-            position :absolute;
-            top: 2rem;
-            right: 2rem;
-            font-size: 1.5rem;
-            color: var(--title-color);
-            cursor: pointer;
-        }
+        .login--close {
+    position: absolute;
+    top: 5rem;
+    right: 50%;
+    transform: translate(50%, -50%);
+    font-size: 1.5rem;
+    color: var(--title-color);
+    cursor: pointer;
+}
 
         /*----login-------*/
         .login--form, .login--group{
