navbar and login form

--- a/templates/index.html
+++ b/templates/index.html
@@ -227,6 +227,12 @@
             transform: translateY(-1rem);
             transition: transform .4s;
         }
+        .login--group input[type="email"],
+        .login--group input[type="password"] {
+           width: 100%; /* Adjust this value as needed */
+           max-width: 350px; /* Adjust this value as needed */
+           margin: 0 auto; /* Center the fields */
+             }
 
         .login--title
         {
