navbar and login form

--- a/templates/index.html
+++ b/templates/index.html
@@ -205,7 +205,7 @@
 
         .login--close {
     position: absolute;
-    top: 5rem;
+    top: 3rem;
     right: 50%;
     transform: translate(50%, -50%);
     font-size: 1.5rem;
@@ -367,14 +367,20 @@
             .login--form{
 
                 padding:3rem 2rem 3.5rem;
+                
             }
+            .login {
+        padding-top: 5rem; /* Adjust the top padding as needed */
+    }
         } 
 
         @media screen and(min-width: 1150px){
 
             .container{
                 margin-inline: auto;
+                
             }
+          
         }
 
     </style>
